<resources>
    <string name="app_name">πPay</string>
    <string name="currency">\u0020ST</string>
    <string name="empty"></string>

    <string name="menu_label_balance">Kontostand</string>
    <string name="menu_text_debt">Kreditschulden: %1$s</string>

    <string name="title_wellcum">Willkommen</string>
    <string name="wc_text_desc">Bevor du die App verwendest, solltest du folgene Einstellungen festlegen:</string>
    <string name="wc_label_enter_name">Lege einen Benutzernamen fest</string>
    <string name="wc_label_enter_pin">Lege eine PIN fest (optional)</string>
    <string name="wc_button_next">Weiter</string>

    <string name="title_send_init">Bezahlen</string>
    <string name="si_text_scan_code">Scanne den QR-Code des Empfängers um fortzufahren.</string>
    <string name="si_text_amount">Betrag</string>
    <string name="si_text_receiver">Empfänger</string>
    <string name="si_text_fee">Gebühr</string>
    <string name="si_text_not_enough_money">Du besitzt nicht genug Geld, um diesen Betrag bezahlen zu können!</string>
    <string name="si_button_scan_again">Nochmal Scannen</string>
    <string name="si_button_pay">Bezahlen</string>
    <string name="si_dialog_enter_pin">Gib deine PIN ein:</string>
    <string name="si_dialog_wrong_pin">Falsche PIN</string>
    <string name="si_sb_transaction_success">Erfolgreich %1$s an %2$s gezahlt!</string>
    <string name="si_sb_already_payed">Du hast diesen Betrag schon gezahlt!</string>

    <string name="title_send_confirm">Bestätigungscode</string>
    <string name="sc_button_done">Fertig</string>

    <string name="title_receive_init">Kassieren</string>
    <string name="ri_text_enter_amount">Gib einen Betrag ein um den QR-Code zu generieren.</string>
    <string name="ri_text_fee">Du erhältst</string>
    <string name="ri_label_amount">Betrag eingeben</string>
    <string name="ri_sb_invalid_amount">Der Betrag muss größer 0 sein! Der Maximalbetrag ist 150.</string>
    <string name="ri_button_scan_confirmation">Weiter</string>

    <string name="title_receive_confirm">Bestätigen</string>
    <string name="rc_text_scan_code">Scanne den Bestätigungscode des Senders.</string>
    <string name="rc_text_invalid_code">Ungültiger Code!</string>
    <string name="rc_sb_transaction_success">Erfolgreich %1$s von %2$s kassiert!</string>

    <string name="title_transactionlog">Verlauf</string>
    <string name="tl_text_from">Von\u0020</string>
    <string name="tl_text_to">An\u0020</string>
    <string name="tl_info_received">"Eingenommen: "</string>
    <string name="tl_info_sent">"Ausgegeben: "</string>
    <string name="tl_info_total">"Gesamt: "</string>
    <string name="tl_dialog_info">Info</string>
    <string name="tl_menu_clear">Alle löschen</string>

    <string name="title_settings">Einstellungen</string>
    <string name="settings_enter_adminpwd">Admin Passwort:</string>
    <string name="settings_checking_password">Überprüfe...</string>
    <string name="settings_wrong_password">Falsches Passwort</string>
    <string name="settings_btn_admin_settings">Admin Einstellungen</string>
    <string name="pref_username">Benutzername</string>
    <string name="pref_username_summ">Dein Name oder der Name deines Unternehmens</string>
    <string name="pref_password">PIN</string>
    <string name="pref_password_summ">Wende dich an einen πPay Admin, um deine PIN zu ändern</string>
    <string name="pref_adminmode">Admin Modus</string>
    <string name="pref_adminmode_summ">Kann nur mit einem Passwort aktiviert werden</string>

    <string name="scanner_scan_again">Nochmal Scannen</string>
</resources>
