<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_username"
        android:title="@string/pref_username"
        android:summary="@string/pref_username_summ"
        android:defaultValue="Schüler" />
    <EditTextPreference
        android:key="pref_password"
        android:title="@string/pref_password"
        android:summary="@string/pref_password_summ"
        android:enabled="false"
        android:dialogLayout="@layout/dialog_enter_pin"
        android:defaultValue=""/>
    <SwitchPreferenceCompat
        android:key="pref_adminmode"
        android:title="@string/pref_adminmode"
        android:summary="@string/pref_adminmode_summ"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="pref_balance"
        android:title="Geld erzeugen"
        android:summary="Nur für Testzwecke"
        android:defaultValue="0" />
</android.support.v7.preference.PreferenceScreen>