<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:paddingTop="32dp"
              android:orientation="vertical"
              tools:context=".WelcomeFragment"
              android:paddingLeft="32dp"
              android:paddingRight="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_wellcum"
        android:layout_gravity="center_horizontal"
        android:textSize="42sp"
        android:textIsSelectable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wc_text_desc"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wc_label_enter_name"
        android:layout_marginTop="48dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/wc_input_username"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wc_label_enter_pin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/wc_input_pin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wc_button_next"
        android:id="@+id/wc_button_next"
        android:layout_gravity="right"
        style="@style/Button.Primary"
        android:layout_marginTop="16dp"/>
</LinearLayout>
