<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:paddingTop="32dp"
              android:orientation="vertical"
              tools:context=".MenuFragment"
              android:paddingLeft="32dp"
              android:paddingRight="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0 ST"
        android:id="@+id/menu_text_balance"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_label_balance"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_text_debt"
        android:layout_gravity="center_horizontal"
        android:id="@+id/menu_text_debt"
        android:textColor="#FFFF0000"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/menu_button_send"
        style="@style/Button.Primary"
        android:text="@string/title_send_init"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/menu_button_receive"
        style="@style/Button.Primary"
        android:text="@string/title_receive_init"/>

</LinearLayout>
