<LinearLayout tools:context=".SendInitFragment"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <de.sjsolutions.pipay.ScannerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/si_qrscanner"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal"
            android:id="@+id/si_text_status"
            android:text="@string/si_text_scan_code"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="?android:listDivider"
            android:showDividers="middle|beginning|end"
            android:id="@+id/si_table_result"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/si_text_receiver_label"
                    android:hint="@string/si_text_receiver"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:textColorPrimary"
                    android:id="@+id/si_text_receiver"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/si_text_amount_label"
                    android:hint="@string/si_text_amount"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:textColorPrimary"
                    android:id="@+id/si_text_amount"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/si_text_fee_label"
                    android:hint="@string/si_text_fee"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:textColorPrimary"
                    android:id="@+id/si_text_fee"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/si_button_pay"
        android:id="@+id/si_button_pay"
        style="@style/Button.Primary"
        android:background="@color/colorAccent"
        android:enabled="false"
        android:layout_alignParentBottom="true"/>
</LinearLayout>