<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:divider="?android:listDivider"
              android:showDividers="middle"
              tools:context=".ReceiveInitFragment"
              android:baselineAligned="false">

    <!-- should be this: https://www.google.com/design/spec/components/text-fields.html#text-fields-full-width-text-field -->
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/ri_input_amount"
        android:hint="@string/ri_label_amount"
        android:background="@null"
        android:gravity="center_vertical|start"
        android:minHeight="?listPreferredItemHeight"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="?listPreferredItemPaddingLeft"
        android:paddingRight="?listPreferredItemPaddingRight"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:digits="0123456789,."/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:scaleType="centerCrop"
            android:id="@+id/ri_image_qrcode"
            android:background="#0f000000"/>

        <TextView
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/ri_text_enter_amount"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ri_text_enter_amount"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ri_button_scan_confirmation"
        android:id="@+id/ri_button_scan_confirmation"
        android:layout_gravity="center_horizontal"
        style="@style/Button.Primary"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:enabled="false"/>

</LinearLayout>
